include_directories(${CMAKE_SOURCE_DIR}/Libraries/Base
		    ${CMAKE_SOURCE_DIR}/Libraries/Type
		    ${CMAKE_SOURCE_DIR}/Libraries/Unittest
		    ${CMAKE_SOURCE_DIR}/Libraries/Unittest/Implement)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif()

find_package(Threads)

# @NOTE: define test cases from Base
#add_executable(auto ${CMAKE_CURRENT_SOURCE_DIR}/Auto.cc)
#add_executable(argparse ${CMAKE_CURRENT_SOURCE_DIR}/Argparse.cc)
#add_executable(deadlock ${CMAKE_CURRENT_SOURCE_DIR}/Deadlock.cc)
#add_executable(exception ${CMAKE_CURRENT_SOURCE_DIR}/Exception.cc)
#add_executable(glob ${CMAKE_CURRENT_SOURCE_DIR}/Glob.cc)
#add_executable(hashtable ${CMAKE_CURRENT_SOURCE_DIR}/Hashtable.cc)
add_executable(list ${CMAKE_CURRENT_SOURCE_DIR}/List.cc)
#add_executable(lock ${CMAKE_CURRENT_SOURCE_DIR}/Lock.cc)
#add_executable(logcat ${CMAKE_CURRENT_SOURCE_DIR}/Logcat.cc)
#add_executable(queue ${CMAKE_CURRENT_SOURCE_DIR}/Queue.cc)
#add_executable(property ${CMAKE_CURRENT_SOURCE_DIR}/Property.cc)
#add_executable(protect ${CMAKE_CURRENT_SOURCE_DIR}/Protect.cc)
#add_executable(popen ${CMAKE_CURRENT_SOURCE_DIR}/Popen.cc)
#add_executable(refcount ${CMAKE_CURRENT_SOURCE_DIR}/Refcount.cc)
#add_executable(stream ${CMAKE_CURRENT_SOURCE_DIR}/Stream.cc)
#add_executable(string ${CMAKE_CURRENT_SOURCE_DIR}/String.cc)
#add_executable(tie ${CMAKE_CURRENT_SOURCE_DIR}/Tie.cc)
#add_executable(thread ${CMAKE_CURRENT_SOURCE_DIR}/Thread.cc)
#add_executable(vertex ${CMAKE_CURRENT_SOURCE_DIR}/Vertex.cc)
#
#target_link_libraries(auto base unittest)
#target_link_libraries(argparse base unittest)
#target_link_libraries(deadlock base unittest)
#target_link_libraries(exception base unittest)
#target_link_libraries(glob base unittest)
#target_link_libraries(hashtable base unittest)
target_link_libraries(list base unittest)
#target_link_libraries(lock base unittest)
#target_link_libraries(logcat base unittest)
#target_link_libraries(queue base unittest)
#target_link_libraries(protect base unittest)
#target_link_libraries(property base unittest)
#target_link_libraries(popen base unittest)
#target_link_libraries(refcount base unittest)
#target_link_libraries(stream base unittest)
#target_link_libraries(string base unittest)
#target_link_libraries(tie base unittest)
#target_link_libraries(thread base unittest)
#target_link_libraries(vertex base unittest)
#
#add_test(NAME auto COMMAND ${CMAKE_CURRENT_BINARY_DIR}/auto)
#add_test(NAME argparse COMMAND ${CMAKE_CURRENT_BINARY_DIR}/argparse)
#add_test(NAME deadlock COMMAND ${CMAKE_CURRENT_BINARY_DIR}/deadlock)
#add_test(NAME exception COMMAND ${CMAKE_CURRENT_BINARY_DIR}/exception)
#add_test(NAME hashtable COMMAND ${CMAKE_CURRENT_BINARY_DIR}/hashtable)
#add_test(NAME glob COMMAND ${CMAKE_CURRENT_BINARY_DIR}/glob)
add_test(NAME list COMMAND ${CMAKE_CURRENT_BINARY_DIR}/list)
#add_test(NAME logcat COMMAND ${CMAKE_CURRENT_BINARY_DIR}/logcat)
#add_test(NAME lock COMMAND ${CMAKE_CURRENT_BINARY_DIR}/lock)
#add_test(NAME queue COMMAND ${CMAKE_CURRENT_BINARY_DIR}/queue)
#add_test(NAME protect COMMAND ${CMAKE_CURRENT_BINARY_DIR}/protect)
#add_test(NAME property COMMAND ${CMAKE_CURRENT_BINARY_DIR}/property)
#add_test(NAME popen COMMAND ${CMAKE_CURRENT_BINARY_DIR}/popen)
#add_test(NAME refcount COMMAND ${CMAKE_CURRENT_BINARY_DIR}/refcount)
#add_test(NAME stream COMMAND ${CMAKE_CURRENT_BINARY_DIR}/stream)
#add_test(NAME string COMMAND ${CMAKE_CURRENT_BINARY_DIR}/string)
#add_test(NAME tie COMMAND ${CMAKE_CURRENT_BINARY_DIR}/tie)
#add_test(NAME thread COMMAND ${CMAKE_CURRENT_BINARY_DIR}/thread)
#add_test(NAME vertex COMMAND ${CMAKE_CURRENT_BINARY_DIR}/vertex)
#
#set_tests_properties(queue PROPERTIES TIMEOUT 400)
#set_tests_properties(hashtable PROPERTIES TIMEOUT 30)
#set_tests_properties(deadlock PROPERTIES TIMEOUT 100)
set_tests_properties(list PROPERTIES TIMEOUT 1000)
#set_tests_properties(lock PROPERTIES TIMEOUT 100)
#set_tests_properties(exception PROPERTIES TIMEOUT 20)
#set_tests_properties(property PROPERTIES TIMEOUT 10)
#set_tests_properties(vertex PROPERTIES TIMEOUT 10)
#set_tests_properties(logcat PROPERTIES TIMEOUT 20)
#set_tests_properties(popen PROPERTIES TIMEOUT 20)
#set_tests_properties(thread PROPERTIES TIMEOUT 120)
#set_tests_properties(string PROPERTIES TIMEOUT 200)
